--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,10 @@ langchain-community==0.4.1
 langchain-core==1.0.4
 langchain-ollama==1.0.0
 langchain-text-splitters==1.0.0
+langgraph==1.0.5
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.3.1
 langsmith==0.4.42
 Markdown==3.10
 MarkupSafe==3.0.3
@@ -53,6 +57,19 @@ mypy_extensions==1.1.0
 networkx==3.5
 numexpr==2.14.1
 numpy==2.3.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 ollama==0.6.1
 openpyxl==3.1.5
 opt-einsum==3.3.0
@@ -103,6 +120,7 @@ tokenizers==0.22.1
 torch==2.6.0
 tqdm==4.67.1
 transformers==4.57.1
+triton==3.2.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
